--- a/index_arquivos/stylesheet.css
+++ b/index_arquivos/stylesheet.css
@@ -107,10 +107,14 @@ td
 	text-align:center;
 	vertical-align:middle;}
 .xl72
+	{mso-style-parent:style16;
+	text-align:center;
+	border:.5pt solid windowtext;}
+.xl73
 	{mso-style-parent:style0;
 	font-size:12.0pt;
 	font-weight:700;
 	text-align:center;}
-.xl73
+.xl74
 	{mso-style-parent:style0;
 	text-align:center;}
